@@ -5093,6 +5093,99 @@ return|return
 name|s
 return|;
 block|}
+DECL|method|testOpenReaderAfterDelete
+specifier|public
+name|void
+name|testOpenReaderAfterDelete
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|File
+name|dirFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"tempDir"
+argument_list|)
+argument_list|,
+literal|"deletetest"
+argument_list|)
+decl_stmt|;
+name|Directory
+name|dir
+init|=
+name|FSDirectory
+operator|.
+name|getDirectory
+argument_list|(
+name|dirFile
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|IndexReader
+name|reader
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|fail
+argument_list|(
+literal|"expected CorruptIndexException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|dirFile
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+comment|// Make sure we still get a CorruptIndexException (not NPE):
+try|try
+block|{
+name|IndexReader
+name|reader
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|fail
+argument_list|(
+literal|"expected CorruptIndexException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+block|}
 DECL|method|deleteReaderReaderConflict
 specifier|private
 name|void
